// ============================================================================
// /sales/order-fulfillment-service (版本 2.0)
// 描述: 提供销售订单的创建、查询和履行状态跟踪功能。
//       字段设计参考核心ERP的 VBAK, VBAP, VBEP 表。
// ============================================================================

syntax = "proto3";

package enterprise.sales.fulfillment;

option java_package = "com.enterprise.sales.fulfillment.v2";
option java_multiple_files = true;
option go_package = "github.com/enterprise-extensions/sales/fulfillment/v2;fulfillment";

import "google/protobuf/timestamp.proto";
import "common/common.proto";

// ============================================================================
// 服务定义: SalesOrderFulfillmentService
// ============================================================================

service SalesOrderFulfillmentService {
  // 创建销售订单
  rpc CreateSalesOrder(CreateSalesOrderRequest) returns (SalesOrderResponse);
  
  // 更新销售订单 (New)
  rpc UpdateSalesOrder(UpdateSalesOrderRequest) returns (SalesOrderResponse);
  
  // 取消销售订单 (New)
  rpc CancelSalesOrder(CancelSalesOrderRequest) returns (SalesOrderResponse);

  // 获取销售订单详情
  rpc GetSalesOrder(GetSalesOrderRequest) returns (SalesOrderDetail);

  // 查询销售订单列表
  rpc ListSalesOrders(ListSalesOrdersRequest) returns (ListSalesOrdersResponse);

  // 获取销售订单的履行状态 (凭证流)
  rpc GetSalesOrderFulfillmentStatus(GetSalesOrderRequest) returns (FulfillmentStatusResponse);
}

// ============================================================================
// 数据结构: SalesOrder (销售订单)
// ============================================================================

// 销售订单抬头 (参考: VBAK)
message SalesOrderHeader {
  enterprise.common.OrderType order_type = 1;
  string sales_org = 2;
  string distribution_channel = 3;
  string division = 4;
  string sold_to_party = 5;
  string ship_to_party = 6;
  string customer_po = 7;
  google.protobuf.Timestamp customer_po_date = 8;
  google.protobuf.Timestamp document_date = 9;
  google.protobuf.Timestamp requested_delivery_date = 10;
  string currency = 11;
  string pricing_procedure = 12;
  string shipping_conditions = 13;
  string delivery_block = 14;
  string billing_block = 15;
}

// 销售订单行项目 (参考: VBAP)
message SalesOrderItem {
  int32 item_number = 1;
  string material = 2;
  string item_description = 3;
  string order_quantity = 4;
  string sales_unit = 5;
  string plant = 6;
  string storage_location = 7;
  string net_value = 8;
  string tax_amount = 9;
  enterprise.common.ItemCategory item_category = 10;
  string rejection_reason = 11;
  int32 higher_level_item = 12;
}

// 销售订单计划行 (参考: VBEP)
message SalesOrderScheduleLine {
    int32 schedule_line_number = 1;
    google.protobuf.Timestamp delivery_date = 2;
    string confirmed_quantity = 3;
}

// 完整的销售订单详情
message SalesOrderDetail {
  string order_number = 1;
  SalesOrderHeader header = 2;
  repeated SalesOrderItem items = 3;
  repeated SalesOrderScheduleLine schedule_lines = 4;
  enterprise.common.AuditData audit_data = 5;
  enterprise.common.OrderStatus overall_status = 6;
}

// ============================================================================
// RPC 消息定义
// ============================================================================

// 创建销售订单请求
message CreateSalesOrderRequest {
  SalesOrderHeader header = 1;
  repeated SalesOrderItem items = 2;
  enterprise.common.RequestContext context = 99;
}

message UpdateSalesOrderRequest {
  string order_number = 1;
  SalesOrderHeader header = 2;
  repeated SalesOrderItem items = 3;
  repeated string update_mask = 4;
  enterprise.common.RequestContext context = 99;
}

message CancelSalesOrderRequest {
  string order_number = 1;
  string cancellation_reason = 2;
  enterprise.common.RequestContext context = 99;
}

// 销售订单响应
message SalesOrderResponse {
  bool success = 1;
  string order_number = 2;
  repeated enterprise.common.ApiMessage messages = 3;
}

// 获取销售订单请求
message GetSalesOrderRequest {
  string order_number = 1;
  enterprise.common.RequestContext context = 99;
}

// 查询销售订单请求
message ListSalesOrdersRequest {
  string sold_to_party = 1;
  string material = 2;
  enterprise.common.DateRange document_date_range = 3;
  enterprise.common.OrderType order_type = 4;
  enterprise.common.OrderStatus status = 6;
  enterprise.common.PaginationRequest pagination = 5;
  enterprise.common.RequestContext context = 99;
}

// 查询销售订单响应
message ListSalesOrdersResponse {
  repeated SalesOrderSummary orders = 1;
  enterprise.common.PaginationResponse pagination = 2;
}

// 销售订单摘要
message SalesOrderSummary {
  string order_number = 1;
  enterprise.common.OrderType order_type = 2;
  google.protobuf.Timestamp document_date = 3;
  string sold_to_party = 4;
  enterprise.common.MonetaryValue net_value = 5;
  enterprise.common.OrderStatus overall_status = 6;
}

// 凭证流响应
message FulfillmentStatusResponse {
  string root_document_number = 1;
  repeated DocumentFlowNode nodes = 2;
}

// 凭证流节点
message DocumentFlowNode {
  int32 node_id = 1;
  int32 parent_id = 2;
  enterprise.common.SystemDocumentReference document = 3;
  string description = 4;
  google.protobuf.Timestamp creation_date = 5;
}
